Add Z21 compatible diagnostics beta
